# magnet-sim

./: LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: index.md
examples/: Readme.md  basic_simulation.py
examples/analytic/: Readme.md  expected_circuits_currents.csv  inputs_circuits_voltages.csv  resistance_circuit.csv
magnet_sim/cli/: __init__.py  main.py
magnet_sim/core/: __init__.py  controllers.py  physics.py  simulation.py
magnet_sim/utils/: __init__.py  config.py  data_loader.py  plotting.py
tests/: __init__.py  test_controllers.py  test_data_loader.py  test_simulation.py
