[metadata]
name = magnet-sim
version = 0.1.0
author = Magnet Simulation Team
author_email = contact@magnet-sim.org
description = A Python package for simulating magnetically coupled RL circuits with PID control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-username/magnet-sim
project_urls =
    Bug Tracker = https://github.com/your-username/magnet-sim/issues
    Documentation = https://magnet-sim.readthedocs.io/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    pandas>=1.3.0
    scipy>=1.7.0
    matplotlib>=3.4.0

[options.packages.find]
where = .
include = magnet_sim*

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov
    black
    flake8
    mypy
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    magnet-sim = magnet_sim.cli.main:main